--- a/laravel/public/sass/_variables.scss
+++ b/laravel/public/sass/_variables.scss
@@ -11,3 +11,5 @@ $lightGrey: #EEE;
 
 $breakpoint: 960px;
 $firstbreakpoint: 1032px;
+
+$gsvnet-z-index-base: 200;
